[project]
name = "teste"
version = "0.1.0"
description = ""
authors = [
    {name = "mlrBatista",email = "mlr.batista@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "teste", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
